objects/Staging_Object__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staging Object</relationshipLabel>
        <relationshipName>Staging_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <externalId>true</externalId>
        <label>Asset_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <externalId>true</externalId>
        <label>Company Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staging Object</relationshipLabel>
        <relationshipName>Staging_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Staging Object (Converted Asset)</relationshipLabel>
        <relationshipName>Staging_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Staging Records</relationshipLabel>
        <relationshipName>StagingRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delete_Date__c</fullName>
        <label>Delete_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Charge_Date__c</fullName>
        <label>First Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migrate_In_Date__c</fullName>
        <label>Migrate In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migrate_Out_Date__c</fullName>
        <label>Migrate Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Charge_Date__c</fullName>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>The Object API name from where the records were archived.</description>
        <label>Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Cancel_Reason__c</fullName>
        <label>Online Cancel Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Online_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Online_GNS_Date__c</fullName>
        <description>This date will reflect the GNS date for WSB assets for all countries as the signup date, and for all other QBO assets as the First Charge Date.</description>
        <inlineHelpText>This date will reflect the GNS date for WSB assets for all countries as the signup date, and for all other QBO assets as the First Charge Date.</inlineHelpText>
        <label>Online_GNS_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Online_Offer_Code__c</fullName>
        <label>Online Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online_Parent</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Parent Assets</relationshipLabel>
        <relationshipName>Online_parent_of_Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Online_Updated_Date__c</fullName>
        <label>Online Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Staging Object</relationshipLabel>
        <relationshipName>Staging_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Staging Object (Original Product)</relationshipLabel>
        <relationshipName>Staging_Object1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Setup_Date__c</fullName>
        <label>Payment Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines if the Asset is primary in the bundle. Valid for online assets only</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Staging Object (Product)</relationshipLabel>
        <relationshipName>Staging_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_First_Charge_Date__c</fullName>
        <description>Stores Projected First Charge Date of an asset.</description>
        <label>Projected First Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReSubscribe_Date__c</fullName>
        <label>ReSubscribe Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Company_Id__c</fullName>
        <label>Related_Company_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signup_Date__c</fullName>
        <label>Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspend_Date__c</fullName>
        <label>Suspend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Date__c</fullName>
        <label>Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Logins__c</fullName>
        <label># of Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>